<resources>
    <string name="app_name" translatable="false">Notes ِApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_to_notes_app">Welcome to Notes App</string>
    <string name="name">Name..</string>
    <string name="phone">Phone..</string>
    <string name="mail">Email..</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="edit_user_data">Edit User Data</string>
    <string name="remove_account">Remove Account</string>
    <string name="write_your_description_about_this_course">Write Your Description about this course</string>
</resources>