<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navgraph"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.example.myapplication.SplashScreenFragment"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreenFragment_to_registerScreenFragment"
            app:destination="@id/registerScreenFragment" />
        <action
            android:id="@+id/action_splashScreenFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerScreenFragment"
        android:name="com.example.myapplication.RegisterScreenFragment"
        android:label="fragment_register_screen"
        tools:layout="@layout/fragment_register_screen">
        <action
            android:id="@+id/action_registerScreenFragment_to_homeFragment"
            app:destination="@id/homeFragment" />

    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplication.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myapplication.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editScreenFragment"
            app:destination="@id/editScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/editScreenFragment"
        android:name="com.example.myapplication.EditScreenFragment"
        android:label="fragment_edit_screen"
        tools:layout="@layout/fragment_edit_screen" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.myapplication.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite" />
</navigation>