<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/persons"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="Name"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="mail"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_tv" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="@string/phone"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_user_data_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@color/purple_700"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/edit_user_data"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/phone_tv"
            app:layout_constraintStart_toStartOf="@+id/phone_tv"
            app:layout_constraintTop_toBottomOf="@+id/phone_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/remove_acccount_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@color/red"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/remove_account"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_user_data_btn"
            app:layout_constraintStart_toStartOf="@+id/edit_user_data_btn"
            app:layout_constraintTop_toBottomOf="@+id/edit_user_data_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>